Исправил тесты